ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Configuration__mdt/fields/API__c.field-meta.xml
<CustomField>
    <fullName>API__c</fullName>
    <inlineHelpText>API for integration</inlineHelpText>
    <label>API</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rest</fullName>
                <default>true</default>
                <label>Rest</label>
            </value>
            <value>
                <fullName>Soap</fullName>
            </value>
            <value>
                <fullName>SF Standard Rest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>