ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Configuration__mdt/fields/Async_On_Retry__c.field-meta.xml
<CustomField>
    <fullName>Async_On_Retry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Async On Retry</label>
    <type>Checkbox</type>
</CustomField>