ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Configuration__mdt/fields/Auth_Techniquie__c.field-meta.xml
<CustomField>
    <fullName>Auth_Techniquie__c</fullName>
    <inlineHelpText>Auth Technique for making the integration call to external system</inlineHelpText>
    <label>Auth Techniquie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Named Credentials</fullName>
            </value>
            <value>
                <fullName>Username and Password</fullName>
            </value>
            <value>
                <fullName>Token</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>