ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Configuration__mdt/fields/Auth_Type__c.field-meta.xml
<CustomField>
    <fullName>Auth_Type__c</fullName>
    <label>Auth Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>