ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Configuration__mdt/fields/Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Name__c</fullName>
    <label>Channel Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Payload Request</fullName>
            </value>
            <value>
                <fullName>Low Payload Request</fullName>
            </value>
            <value>
                <fullName>High Payload Response</fullName>
            </value>
            <value>
                <fullName>Low Payload Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>