ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Configuration__mdt/fields/DML_Target_Object__c.field-meta.xml
<CustomField>
    <fullName>DML_Target_Object__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DML Target Object</label>
    <type>Checkbox</type>
</CustomField>