ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Configuration__mdt/fields/Enable_Message_logs__c.field-meta.xml
<CustomField>
    <fullName>Enable_Message_logs__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check if messages need to be captured</inlineHelpText>
    <label>Enable Message logs</label>
    <type>Checkbox</type>
</CustomField>