ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Configuration__mdt/fields/Encryption_Key__c.field-meta.xml
<CustomField>
    <fullName>Encryption_Key__c</fullName>
    <label>Encryption Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>