ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Configuration__mdt/fields/Integration_Name__c.field-meta.xml
<CustomField>
    <fullName>Integration_Name__c</fullName>
    <label>Integration Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADAuthentication</fullName>
            </value>
            <value>
                <fullName>Agreement Booklet</fullName>
            </value>
            <value>
                <fullName>AML Check</fullName>
            </value>
            <value>
                <fullName>APD Pending</fullName>
            </value>
            <value>
                <fullName>Biometric Verification</fullName>
            </value>
            <value>
                <fullName>BREscorecardAPI</fullName>
            </value>
            <value>
                <fullName>CAM Portfolio</fullName>
            </value>
            <value>
                <fullName>CarWale Prices</fullName>
            </value>
            <value>
                <fullName>Cibil Match</fullName>
            </value>
            <value>
                <fullName>Create Applicant</fullName>
            </value>
            <value>
                <fullName>CSR Vahan</fullName>
            </value>
            <value>
                <fullName>CSR Vahan FI Waiver</fullName>
            </value>
            <value>
                <fullName>Customer API</fullName>
            </value>
            <value>
                <fullName>Customer Dedupe</fullName>
            </value>
            <value>
                <fullName>CustomerExposure</fullName>
            </value>
            <value>
                <fullName>Customer Master Creation</fullName>
            </value>
            <value>
                <fullName>Customer Master Updation</fullName>
            </value>
            <value>
                <fullName>Customer Name Search</fullName>
            </value>
            <value>
                <fullName>DealEligibleRefinance</fullName>
            </value>
            <value>
                <fullName>Deal Master</fullName>
            </value>
            <value>
                <fullName>DemoAuth</fullName>
            </value>
            <value>
                <fullName>DMSUpload</fullName>
            </value>
            <value>
                <fullName>DocAuth</fullName>
            </value>
            <value>
                <fullName>Document Report</fullName>
            </value>
            <value>
                <fullName>Driving License</fullName>
            </value>
            <value>
                <fullName>Email Check</fullName>
            </value>
            <value>
                <fullName>Email Service</fullName>
            </value>
            <value>
                <fullName>ENACH Registration Journey</fullName>
            </value>
            <value>
                <fullName>ENACH Registration Status</fullName>
            </value>
            <value>
                <fullName>EPFO Auth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>