ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Configuration__mdt/fields/IsActive_Integration__c.field-meta.xml
<CustomField>
    <fullName>IsActive_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsActive Integration</label>
    <type>Checkbox</type>
</CustomField>