ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Configuration__mdt/fields/IsStub_Required__c.field-meta.xml
<CustomField>
    <fullName>IsStub_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsStub Required?</label>
    <type>Checkbox</type>
</CustomField>