ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Configuration__mdt/fields/Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object__c</fullName>
    <inlineHelpText>Name of the object from which the data need to be pulled</inlineHelpText>
    <label>Parent Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>