ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Configuration__mdt/fields/Request_fields__c.field-meta.xml
<CustomField>
    <fullName>Request_fields__c</fullName>
    <inlineHelpText>Comma Separated List of Field. Each field API name should have mapping with attribute name to be used in Request</inlineHelpText>
    <label>Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>