ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Configuration__mdt/fields/Request_Format__c.field-meta.xml
<CustomField>
    <fullName>Request_Format__c</fullName>
    <label>Request Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JSON</fullName>
                <default>true</default>
                <label>JSON</label>
            </value>
            <value>
                <fullName>XML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>