ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Configuration__mdt/fields/Response_wrapper__c.field-meta.xml
<CustomField>
    <fullName>Response_wrapper__c</fullName>
    <label>Response wrapper</label>
    <length>255</length>
    <type>Text</type>
</CustomField>