ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Configuration__mdt/fields/Target_URL__c.field-meta.xml
<CustomField>
    <fullName>Target_URL__c</fullName>
    <label>Target URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>