ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Configuration__mdt/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <label>Timeout</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>