ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Configuration__mdt/fields/Vector_Key__c.field-meta.xml
<CustomField>
    <fullName>Vector_Key__c</fullName>
    <label>Vector Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>